# orchast_agent

./: .gitignore  CLAUDE.md  LICENSE  README.ko.md  README.md  course_generated_by_course_generator_agent.md  full_build_log.txt  mkdocs.yml  work_plan.json
.github/workflows/: deploy-docs.yml
book-writer/: .gitignore  README.md  README_KR.md  ai-webtoon-toc.json  pyproject.toml  run_book.py
book-writer/app/: agent.py  tools.py
caveman-compressor/: .gitignore  DESIGN_SPEC.md  README.md  pyproject.toml
caveman-compressor/app/: agent.py  fast_api_app.py
caveman-compressor/app/app_utils/: telemetry.py  typing.py
caveman-compressor/tests/.adk/: session.db
caveman-compressor/tests/eval/: eval_config.json
caveman-compressor/tests/eval/evalsets/: basic.evalset.json
course-generator/: .gitignore  DESIGN_SPEC.md  Generate a complete course package for__  Cours....json  README.md  pyproject.toml
course-generator/app/: agent.py  fast_api_app.py
course-generator/app/app_utils/: telemetry.py  typing.py
course-generator/tests/eval/: eval_config.json
course-generator/tests/eval/evalsets/: course_generator.evalset.json
course-generator/tests/integration/: test_agent.py
dev-team/: .env.example  .gitignore  README.md  config.py  goals.md  pyproject.toml  run.py
dev-team/app/: agents.py
dev-team/app/prompts/: architect.py  backend.py  designer.py  devops.py  frontend.py  pm.py  qa.py
dev-team/app/tools/: build.py  files.py  git.py  github.py  nextjs.py  project_state.py  skills.py  vercel.py  web.py
dev-team/skills/: ci.sh  db.sh  deploy.sh  docker.sh  go.sh  node.sh  python.sh  registry.json  rust.sh
docs/: product-spec.md  progress.md  tech-stack.md  vision.md
docs_site/: architecture.md  config.md  contributing.md  dev-team.md  index.md  setup.md  usage.md
docs_site/agents/: book-writer.md  caveman-compressor.md  course-generator.md  index.md  scie_paper_writer.md  self-evolving-agent.md  tiny-company.md  tiny-jarvis.md  tutorial-debug-agent.md
overrides/partials/: footer.html
scie_paper_writer/: .gitignore  README.md  pyproject.toml  run_paper.py  sample-spec.json
scie_paper_writer/app/: agent.py  tools.py
self-evolving-agent/: .gitignore  CLAUDE.md  README.ko.md  README.md  pyproject.toml
self-evolving-agent/app/: agent.py  fast_api_app.py
self-evolving-agent/app/app_utils/: telemetry.py  typing.py
self-evolving-agent/app/registry/: manager.py  registry.json
self-evolving-agent/app/safety/: policy.py
self-evolving-agent/app/sandbox/: runner.py
self-evolving-agent/desktop/: .gitignore  README.md  app.zon  build.zig
self-evolving-agent/desktop/frontend/: index.html  package-lock.json  package.json  vite.config.js
self-evolving-agent/desktop/frontend/src/: App.svelte  app.css
self-evolving-agent/desktop/frontend/src/lib/: ChatPanel.svelte  LeftSidebar.svelte  RegistryPanel.svelte  StatusBar.svelte  api.js
self-evolving-agent/desktop/src/: main.zig
self-evolving-agent/docs/: database_integration_research.md  desktop_gui_research.md
self-evolving-agent/tests/eval/: eval_config.json
self-evolving-agent/tests/eval/evalsets/: README.md  create_new_tool.evalset.json  safety.evalset.json  use_existing_tool.evalset.json
self-evolving-agent/tests/unit/: test_registry.py  test_safety.py  test_sandbox.py  test_tools.py
site/: 404.html  index.html
site/agents/: index.html
site/agents/book-writer/: index.html
site/agents/caveman-compressor/: index.html
site/agents/course-generator/: index.html
site/agents/scie_paper_writer/: index.html
site/agents/self-evolving-agent/: index.html
site/agents/tiny-company/: index.html
site/agents/tiny-jarvis/: index.html
site/agents/tutorial-debug-agent/: index.html
site/architecture/: index.html
site/config/: index.html
site/contributing/: index.html
site/dev-team/: index.html
site/search/: search_index.json
site/setup/: index.html
site/usage/: index.html
tiny-jarvis/: .env.example  .gitignore  CLAUDE.md  README.en.md  README.md  config.py  pyproject.toml  run.py
tiny-jarvis/app/: agents.py
tiny-jarvis/app/prompts/: architect.py  backend.py  pm.py  qa.py
tiny-jarvis/app/tools/: files.py  git.py  github.py  project_state.py  python_dev.py  web.py
tiny-jarvis/docs/: guide.en.md  guide.ko.md
tutorial-debug-agent/: README.md  pyproject.toml
tutorial-debug-agent/app/: agent.py  fast_api_app.py
tutorial-debug-agent/app/.adk/: session.db
tutorial-debug-agent/app/app_utils/: telemetry.py  typing.py
tutorial-debug-agent/tests/eval/: eval_config.json
tutorial-debug-agent/tests/eval/evalsets/: basic.evalset.json
website/: README.md
