[project]
name = "scie-paper-writer"
version = "0.1.0"
description = "Multi-agent scientific paper writer using local Ollama models"
dependencies = [
    "google-adk[extensions]>=1.15.0,<2.0.0",
    "litellm>=1.50.0",
    "pyyaml>=6.0",
    "python-slugify>=8.0.0",
]
requires-python = ">=3.11,<3.14"


[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=1.15.0,<2.0.0",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "codespell>=2.2.0,<3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.codespell]
skip = "uv.lock,.venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.agents-cli]
name = "scie-paper-writer"
description = "Multi-agent scientific paper writer using local Ollama models"
base_template = "adk"
agent_directory = "app"
generated_at = "2026-06-04T00:00:00+00:00"
acli_version = "0.1.3"

[tool.agents-cli.create_params]
deployment_target = "none"
session_type = "in_memory"
cicd_runner = "skip"
include_data_ingestion = false
datastore = "none"
agent_guidance_filename = "CLAUDE.md"
