[project]
name = "tiny-jarvis"
version = "0.1.0"
description = "Autonomous AI dev team that builds a personal Telegram scheduling agent"
requires-python = ">=3.11,<3.14"
dependencies = [
    "google-adk>=1.15.0,<2.0.0",
    "litellm>=1.50.0",
    "ddgs>=8.0.0",
    "trafilatura>=2.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=1.15.0,<2.0.0",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "codespell>=2.2.0,<3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.codespell]
skip = "uv.lock,.venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.agents-cli]
name = "tiny-jarvis"
description = "Autonomous AI dev team building a personal Telegram scheduling agent"
base_template = "adk"
agent_directory = "app"
generated_at = "2026-05-22T00:00:00+00:00"
acli_version = "0.1.3"

[tool.agents-cli.create_params]
deployment_target = "none"
session_type = "in_memory"
cicd_runner = "skip"
include_data_ingestion = false
datastore = "none"
agent_guidance_filename = "CLAUDE.md"
